# Cubegame

./: CMakeLists.txt  Chunk.cpp  Chunk.h  README.md  main.cpp
assets/: main.frag
glad/src/: glad.c
graphics/: Camera.cpp  Camera.h  Model.cpp  Model.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Shader.cpp  Shader.h  window.cpp  window.h
include/glad/: glad.h
math/: matrix.h  vector.h
